--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
         <article>
             <section>
                 <p>
-                    A former UK Government cyber leader and Financial Times cyber chief, Dr. Ahana Datta Fasel advises global governments and industry on geopolitical and systemic risk. She is a non-executive director at a global digital rights charity, adviser to deep tech start-ups, and a strategic advisor on resilience to UK Research and Innovation. A prolific speaker and writer, she has held fellowships at Cornell, Cambridge, Imperial and Durham, with editorials appearing in the FT and Columbia Journalism Review.
+                    A former UK Government cyber leader and Financial Times cyber chief, Dr. Ahana Datta Fasel advises global governments and industry on geopolitical, AI and systemic risk strategies.
+                </p>
+                <p>
+                    She serves as non-executive director at a leading global digital rights charity, adviser to deep tech start-ups, and a strategic adviser on national security and resilience to the UK body for research, innovation and international partnerships. A prolific speaker and writer, she has held fellowships at Cornell, Cambridge, Imperial and Durham.
                 </p>
             </section>
 
